phase2/networking/policy/only-allow-ingress-to-pod02.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-to-pod02
spec:
  podSelector:
    matchLabels:
      name: pod02
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: "name"
          operator: "In"
          values:
          - pod01
          - pod03
            #matchLabels:
            #access: "true"
